[gd_scene load_steps=9 format=2]

[ext_resource path="res://Steuerung.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Buttons/Tastatur.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/Tastatur1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Buttons/Gamepad.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/Gamepad1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/Zurück.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/Zurück1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Sky.png" type="Texture" id=8]

[node name="Steuerung" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 244.0
margin_top = 101.0
margin_right = 396.0
margin_bottom = 259.0

[node name="Keyboard" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_right = 152.0
margin_bottom = 48.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 3 )

[node name="Gamepad" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 152.0
margin_bottom = 107.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="BackButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 152.0
margin_bottom = 158.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 7 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 640, 640 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 8 )
centered = false
[connection signal="pressed" from="CenterContainer/VBoxContainer/Keyboard" to="." method="_on_Keyboard_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Gamepad" to="." method="_on_Gamepad_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
